--- a/analizadialog.ui
+++ b/analizadialog.ui
@@ -26,6 +26,26 @@
     <string>&lt;-</string>
    </property>
   </widget>
+  <widget class="QWidget" name="widgetMiesiac" native="true">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>100</y>
+     <width>411</width>
+     <height>281</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="widgetKwartal" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>100</y>
+     <width>411</width>
+     <height>281</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
