--- a/wplywydialog.ui
+++ b/wplywydialog.ui
@@ -80,16 +80,18 @@
    </item>
    <item>
     <layout class="QGridLayout" name="formGridLayout">
-     <property name="verticalSpacing">
-      <number>15</number>
-     </property>
      <property name="horizontalSpacing">
       <number>10</number>
+     </property>
+     <property name="verticalSpacing">
+      <number>15</number>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label_4">
        <property name="font">
-        <font><bold>true</bold></font>
+        <font>
+         <bold>true</bold>
+        </font>
        </property>
        <property name="text">
         <string>Kwota:</string>
@@ -117,7 +119,9 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_5">
        <property name="font">
-        <font><bold>true</bold></font>
+        <font>
+         <bold>true</bold>
+        </font>
        </property>
        <property name="text">
         <string>Data:</string>
@@ -141,7 +145,9 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_6">
        <property name="font">
-        <font><bold>true</bold></font>
+        <font>
+         <bold>true</bold>
+        </font>
        </property>
        <property name="text">
         <string>Opis:</string>
@@ -158,9 +164,25 @@
     </layout>
    </item>
    <item>
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>:/income.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="mainVerticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
      </property>
     </spacer>
    </item>
@@ -173,7 +195,9 @@
       </size>
      </property>
      <property name="font">
-      <font><bold>true</bold></font>
+      <font>
+       <bold>true</bold>
+      </font>
      </property>
      <property name="text">
       <string>DODAJ WPŁYW</string>
@@ -182,12 +206,23 @@
    </item>
   </layout>
  </widget>
+ <resources/>
  <connections>
   <connection>
    <sender>wsteczWP</sender>
    <signal>clicked()</signal>
    <receiver>WplywyDialog</receiver>
    <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>20</x>
+     <y>20</y>
+    </hint>
+   </hints>
   </connection>
  </connections>
 </ui>
